--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @font-face{
     font-family: myfont;
-    src: url(/fonts/Billabong.ttf)
+    src: url(./fonts/Billabong.ttf)
 }
 :root{
     --bg:#080A0D;
